# logdive

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
crates/api/: Cargo.toml
crates/api/src/: error.rs  handlers.rs  main.rs  router.rs  state.rs
crates/api/tests/: integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  render.rs
crates/core/: Cargo.toml
crates/core/benches/: bench_ingest.rs  bench_query.rs
crates/core/src/: entry.rs  executor.rs  indexer.rs  lib.rs  parser.rs  query.rs
docs/AI/: About.md  Context.md  Project.md
examples/: README.md
scripts/: prerelease-check.sh
